Fix assets page styling & alignment, sync settings_data

--- a/src/assets/styles/6.components/pages/assets/assets-item.scss
+++ b/src/assets/styles/6.components/pages/assets/assets-item.scss
@@ -2,6 +2,8 @@
   position: relative;
   display: flex;
   flex-flow: row wrap;
+  text-decoration: none;
+  padding: 0 5px;
   margin: 0 0 40px;
   height: calc(100% - 40px);
   cursor: pointer;
@@ -22,6 +24,7 @@
   &__embed {
     width: 100%;
     height: 100%;
+    background-color: $color-white;
   }
 
   &__image-wrap {
@@ -30,6 +33,7 @@
     margin: 0 0 10px;
     display: block;
     flex: 1 1 100%;
+    height: 200px;
   }
 
   &__image {
@@ -37,6 +41,7 @@
     object-fit: scale-down;
     width: 100%;
     height: 100%;
+    background-color: $color-white;
   }
 
   &__flex-splitter {
