--- a/src/assets/styles/6.components/pages/assets/assets.scss
+++ b/src/assets/styles/6.components/pages/assets/assets.scss
@@ -1,6 +1,8 @@
 .assets {
   @import "./assets-search";
   @import "./assets-item";
+  overflow: hidden;
+  background-color:  $color-aqua-haze;
 
   .pagination {
     text-align: center;
